@@ -11,6 +11,12 @@ version 2.69
 	    --dhcp-option=option6:23,[::] Thanks to Tsachi Kimeldorfer
 	    for spotting the problem.
 
+	    Add [fd00::] and [fe80::] as special addresses in DHCPv6
+	    options, analogous to [::]. [fd00::] is replaced with the
+	    actual ULA of the interface on the machine running
+	    dnsmasq, [fe80::] with the link-local address. 
+	    Thanks to Tsachi Kimeldorfer for championing this.
+
 
 version 2.68
             Use random addresses for DHCPv6 temporary address
